$Id: NEWS,v 1.444 2003-06-09 17:25:26 castaglia Exp $

CVS
---------------------------------
- Bug 2051 - freebytes in TransferRate does not work properly.
- Bug 2043 - Proftpd converts LF to CRLF on PUT on Cygwin.  This turned out
  to be caused by the Cygwin layer.  The fix was to use the Cygwin-specific
  O_BINARY open() flag when opening binary files on Cygwin.
- Bug 1804 - Permit selection of additional contrib modules when building
  the RPM
- Bug 2074 - MaxStoreFileSize restriction capabilities ignored.  This bug
  was affecting MaxRetrieveFileSize as well.
- Bug 2075 - LIST / fails under Cygwin.  This was due to the addition of
  an additional path separator character; Cygwin treats paths that start
  with "//" differently than paths that start with "/".
- Bug 2076 - The --enable-transfer-buffer-size configure option doesn't work
  properly.  It was overriding the --enable-buffer-size option, rather than
  the corresponding tunable buffer size.
- Bug 2069 - Long MKD path causes truncated server response.
- Fixed handling of %N/%y in DisplayConnect files.
- Bug 2083 - "550 Access denied" on group permission with AuthGroupFile.  This
  was caused by a strictly linear search in the AuthGroupFile from the
  current file pointer to end of file, which (depending on the ordering of
  entries in the file) might have skipped necessary group entries.

1.2.9rc1 - Released 15-May-2003
---------------------------------
- Bug 1828 - mod_sql can only find mysql.sock if in /tmp.  This was caused
  by the fact that mod_sql_mysql did not load/read the MySQL .cnf
  configuration files.  Now, when starting, mod_sql_mysql will read .cnf
  files for "client" sections.
- Bug 1960 - Add removed file size by DELE command to xferlog.
- Bug 1967 - Add display of uptime to ftpwho, ftptop.
- Added AnonRejectPasswords directive.
- Added ftpshut -D command-line option, for deleting the ftpshut shutdown
  file.
- Bug 1972 - %T not correctly shows time at performance of a command "rename".